--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <p id="author"></p>
+        <main>
+            <div class="top">
+                <p>Crypto</p>
+                <p>weather</p>
+            </div>
+
+            <h1 class="TIME">TIME HERE</h1>
+
+            <p id="author"></p>
+        </main>
         <script src="index.js"></script>
     </body>
 </html>
